--- a/Demo.Client/Demo.Client.csproj
+++ b/Demo.Client/Demo.Client.csproj
@@ -17,4 +17,8 @@
     <Folder Include="Constant\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
