--- a/Demo/Demo.APICore.csproj
+++ b/Demo/Demo.APICore.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Demo.Database\Demo.Database.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
