--- a/IdentityServer/Demo.Identity.csproj
+++ b/IdentityServer/Demo.Identity.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Demo.Database\Demo.Database.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
